# Building-MCP-With-Cursor

./: README.md
Building MCP With Cursor/: client.py  main.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
